add a link to the ML archives

--- a/views/about.tt
+++ b/views/about.tt
@@ -15,7 +15,7 @@ Dancer is free software, it is released under the same terms as Perl itself.
 <h3>Contact</h3>
 
 <p>
-Feel free to <a href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe the mailing list</a> if you want to contact users and developers of the project.
+Feel free to <a href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe the mailing list</a> if you want to contact users and developers of the project. You can also check out the archives <a href="http://lists.perldancer.org/pipermail/dancer-users/">here</a>.
 </p>
 
 <p>
