--- a/views/documentation.tt
+++ b/views/documentation.tt
@@ -5,7 +5,7 @@ The documentation is available on
 <a href="http://search.cpan.org/dist/Dancer/">Dancer's CPAN page</a>.
 
 The documentation has been divided into sections in order to 
-make the reading more confortable.
+make the reading more comfortable.
 </p>
 
 <ul>
