add page to show web sites built by Dancer

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -23,6 +23,7 @@
     <li><a href="/">Overview</a></li>
     <li><a href="/quickstart">Quick Start</a></li>
     <li><a href="/example">Example</a></li>
+    <li><a href="/used_by">Used by...</a></li>
     <li><a href="/documentation">Documentation</a></li>
     <li><a href="/download">Download</a></li>
     <li><a href="/contribute">Contribute</a></li>
