--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -23,10 +23,10 @@
     <li><a href="/">Overview</a></li>
     <li><a href="/quickstart">Quick Start</a></li>
     <li><a href="/example">Example</a></li>
-    <li><a href="/used_by">Used by...</a></li>
     <li><a href="/documentation">Documentation</a></li>
     <li><a href="/download">Download</a></li>
     <li><a href="/contribute">Contribute</a></li>
+    <li><a href="/used_by">Dancefloor</a></li>
     <li><a href="/about">About</a></li>
 	<li><a href="/donate">Donate</a></li>
 </ul>
