--- a/views/donate.tt
+++ b/views/donate.tt
@@ -1,4 +1,4 @@
-<h2>Donating to the project</h2>
+<h2>Donating to the Project</h2>
 
 <p>
 You can support the project by donating to the development team. There is no
