--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,51 +1,120 @@
 html, body {
     height: 100%;
-    background-color: #3c516e;
+    background: #305487 URL(/images/dancer_bg.jpg) no-repeat;
     margin: 0;
 }
 
+html,body,body * {
+    font-family: 'helvetica','arial','sans serif'; 
+}
+
 a { 
-    color: #3c516e;
+    color: #305487;
 }
 
 a:hover {
     text-decoration: underline;
 }
 
+a.action_button {
+    padding: 12px;
+    background-color: #fec048;
+    color: #505050;
+    font-weight: bold;
+    /* round corners are a mess! */
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #505050;
+    text-decoration: none;
+}
+a.action_button:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    background-color: #ffcf4f;
+}
+
+#header {
+    width: 100%;
+    margin-left: 60px;
+    margin-top: 20px;
+}
+#main_logo {
+    float: left;
+    width: 80px;
+    height: 80px;
+    margin-top: -10px;
+    margin-right: 10px;
+}
+#main_logo img {
+    border: none;
+}
+#main_tagline {
+    font-size: small;
+    color: #d0d0e0;
+    font-weight: bold;
+    margin: 0;
+}
+#header h1 {
+    color: white;
+    font-size: 32pt;
+    font-weight: bold;
+    border: none;
+    margin: 0;
+}
+#home_sidebar {
+    float: right;
+    width: 200px;
+    margin: 30px 0 30px 20px;
+    padding-top: 40px;
+}
+
 #menu {
-    position: absolute;
-    left: 0px;
-    top: 20px;
+    background: #252535;
+    border: 1px solid #505050;
+    /* round corners are a mess! */
+    -moz-border-radius-topleft: 20px;
+    -moz-border-radius-topright: 20px;
+    -webkit-border-top-left-radius: 20px;
+    -webkit-border-top-right-radius: 20px;
+    -khtml-border-top-left-radius: 20px;
+    -khtml-border-top-right-radius: 20px;
+    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    padding: 0 10px 0px 20px;
+    margin: 20px 60px 0 60px;
+    overflow: auto; /* force to expand to fit floated content */
 }
 
 #menu ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    overflow: auto; /* force to expand to fit floated content */
 }
 
 #menu ul li a {
     text-decoration: none;
     display: block;
-    color: #3c516e;
+    color: #efefef;
+    font-weight: bold;
+    padding: 12px 8px;
+    margin: 0;
 }
 
-#menu ul li:hover {
-    background-color: #eeb938;
-    color: #3c516e;
-    border-left:3px solid #fff;
+#menu ul li:hover, #menu ul li:hover a {
+    color: #fec048;
+    text-decoration: underline;
 }
 
 #menu ul li {
-    margin-bottom: 4px;
-    border-left:3px solid #eeb938;
-    margin-left: 5px;
-    padding-left: 4px;
-    background-color: #eee;
-    font-size:20px;
-    letter-spacing:3px;
+    margin: 0;
+    font-size:11pt;
     line-height:1.25;
-    text-transform:uppercase;
+    display: inline;
+    float: left;
 }
 
 #menu div a {
@@ -53,7 +122,6 @@ a:hover {
 }
 
 #menu div {
-font-family: sans-serif;
     color: #ddd;
     margin: 1em;
 }
@@ -69,7 +137,6 @@ font-family: sans-serif;
     margin-top: 30px;
     padding-top: 2px;
 
-    font-family:sans-serif;
     font-size: 12px;
     color: #999;
     text-align: center;
@@ -81,24 +148,31 @@ font-family: sans-serif;
 
 #container {
     /* height: 500px; */
-    background: #3c516e url('/images/dancer.png') no-repeat bottom left; 
+    background: #305487;
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -4em;
+    margin:  0 60px 20px 60px;
 }
 
 #content {
     /* background: #fff url('/images/dancer-content-bg.png') no-repeat top right; */
 	background-color: #fff;
-    border-left: 4px solid #fff;
-    border-right: 6px solid #eeb938;
+    border: 1px solid #505050;
+    border-top: none;
     color: #444;
-    margin-left: 260px;
-    padding-left: 10px;
-    padding-top: 8px;
-    padding-bottom: 2em;
+    padding: 16px 30px;
     min-height: 460px;
+    /* round corners are a mess */
+    -moz-border-radius-bottomleft: 20px;
+    -moz-border-radius-bottomright: 20px;
+    -webkit-border-bottom-left-radius: 20px;
+    -webkit-border-bottom-right-radius: 20px;
+    -khtml-border-bottom-left-radius: 20px;
+    -khtml-border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding-bottom: 40px;  /* force extra whitespace at bottom of content*/
 }
 
 #content ul {
@@ -109,50 +183,37 @@ font-family: sans-serif;
 	margin-bottom: 1em;
 }
 
-h1 { 
-    letter-spacing: 4.5px;
-    font-size:54px;
-    letter-spacing:3px;
+h1,h2,h3,h4,h5 {
     line-height:1.25;
-    margin: 0;
-    font-family:'georgia','bitstream vera serif',serif; 
-    color: #000;
+    color: #305487;
+    margin-right: 16px;
+}
+#content h1,h2,h3,h4,h5 {
+    margin-left: -10px;
+}
+
+h1 { 
+    border-bottom: 1px solid #eeb938;
+    margin-top: 6px;
 }
 
 h2 { 
-    letter-spacing: 4.5px;
     font-size:20px;
-    letter-spacing:3px;
-    line-height:1.25;
-    text-transform:uppercase;
     font-weight: normal;
-    font-family: sans-serif;
-    margin-top: 0;
-    color: #3c516e;
+    margin-top: 6px;
     border-bottom: 1px solid #eeb938;
 }
 
 h3 { 
-    color: #3c516e;
     font-size:16px;
-    letter-spacing:3px;
-    line-height:1.25;
-    text-transform:uppercase;
-    font-family: sans-serif;
     margin-top: 0;
 }
 
 h4 { 
-    letter-spacing: 2px;
-    line-height:1.25;
-    color: #3c516e;
-    text-transform:uppercase;
     font-size:14px;
-    font-family: sans-serif;
     margin-top: 0;
 }
 #content p, #content ul {
-    font-family:'georgia','bitstream vera serif',serif;
     font-size: 16px;
     margin-right: 10px;
     width: 650px;
@@ -172,4 +233,24 @@ pre.shell {
     margin-right: 1em;
 }
 
-
+div.callout_bar {
+    background: #f0f0f0 URL(/images/grey-gradient.png) repeat-x;
+    border: 1px solid #c0c0c0;
+    height: 200px;
+}
+div.callout {
+    float: left;
+    font-size: x-small;
+    width: 45%;
+    border-left: 1px solid #c0c0c0;
+    padding: 4px;
+    height: 190px;
+}
+#content div.callout ul li {
+    margin: 0;
+}
+div.callout h2 {
+    font-size: medium;
+    margin: 0;
+    padding: 4px;
+}
