--- a/views/home.tt
+++ b/views/home.tt
@@ -1,10 +1,68 @@
-<h1>Dancer</h1>
+<div id="home_sidebar">
 
-<p style="margin: 0; margin-bottom: 1em;">
-<em>The easiest way to write web applications in Perl</em>
+    <a class="action_button" href="/downloads/Dancer-1.150.tar.gz">Download Now!</a>
+    <br/>
+
+</div>
+
+<h2>What is Dancer?</h2>
+
+<p>
+Dancer is a web application framework written in <a href="http://www.perl.org">Perl</a>.
+</p>
+<p>
+Dancer aims to provide the simplest way for writing web applications, and offers the flexibility to scale between a very simple lightweight web service consisting of a few lines of code in a single file, all the way up to a more complex fully-fledged web application with session support, templates for views and layouts, etc.
+</p>
+<p>
+If you don't want to write CGI scripts by hand, and find Catalyst too big or cumbersome for your project, Dancer is what you need.
+</p>
+<p>
+Dancer has few pre-requisites, so your Dancer webapps will be easy to deploy.
+</p>
+<p>
+Dancer apps can be used with a an embedded web server (great for easy testing), and can run under PSGI/Plack for easy deployment in a variety of webserver environments.
 </p>
 
-<h2>Prepare your moves</h2>
+<div class="callout_bar">
+    <div class="callout">
+        <h2>Getting Help</h2>
+        <ul>
+            <li>
+                <a href="/donate">Documentation</a> - main Dancer documentation
+            </li>
+            <li>
+                <a href="http://rt.cpan.org/Public/Bug/Report.html?Queue=Dancer">Report Bugs</a> - new and existing issues
+            </li>
+            <li>
+                <a href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">Mailing List</a> - subscribe or view archives
+            </li>
+            <li>
+                <a href="http://widget.mibbit.com/?settings=285bba04946885da044c7d1e16a79b46&server=irc.perl.org&channel=%23dancer">IRC channel</a> - chat with developers and users
+            </li>
+    </div>
+    <div class="callout">
+        <h2>Who's Using Dancer?</h2>
+        <ul>
+            <li>
+                <a href="http://perl.worldken.org">CPAN Hubble</a> - Searching CPAN and github
+            </li>
+            <li>
+                <a href="http://pb.rbfh.de">Pastedance</a> - a pastebin clone
+            </li>
+            <li>
+                <a href="http://lyricsbadger.co.uk">Lyrics Badger</a> - search engine for lyrics
+            </li>
+            <li>
+                <a href="http://www.imaginaryrobots.net">ImaginaryRobots.net</a> - a personal website
+            </li>
+            <li>
+                <a href="/used_by">more...</a>
+            </li>
+        </ul>
+    </div>
+</div>
+
+<h2>Example Dancer Application</h2>
 
 <pre class="prettyprint">
 #!/usr/bin/perl
@@ -18,13 +76,7 @@ get '/hi' => sub {
 dance;
 </pre>
 
-<h2>And dance</h2>
+<p>
+    <a href="/example">More examples...</a>
+</p>
 
-<pre class="shell">
-$ sudo cpan Dancer
-[...]
-$ perl ./hi.pl
->> Listening on 127.0.0.1:3000
-== Entering the dance floor ...
-== GET /hi HTTP/1.0 200 OK
-</pre>
