--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -17,18 +17,26 @@
 </head>
 <body onload="prettyPrint()">
 
+<div id="header">
+    <a href="/">
+    <div id="main_logo">
+        <img src="/images/dancer_logo.png" width="80" height="80"/>
+    </div>
+    <h1>Dancer</h1>
+    <div id="main_tagline">The easiest way to write web applications in Perl</div>
+    </a>
+</div>
+
 <div id="menu">
 
-<ul>
-    <li><a href="/">Overview</a></li>
+    <ul>
+    <li><a href="/">Home</a></li>
     <li><a href="/quickstart">Quick Start</a></li>
-    <li><a href="/example">Example</a></li>
+    <li><a href="/download">Downloads</a></li>
     <li><a href="/documentation">Documentation</a></li>
-    <li><a href="/download">Download</a></li>
-    <li><a href="/contribute">Contribute</a></li>
-    <li><a href="/used_by">Dancefloor</a></li>
+    <li><a href="/contribute">Community</a></li>
     <li><a href="/about">About</a></li>
-	<li><a href="/donate">Donate</a></li>
+    <li><a href="/donate">Donate</a></li>
 </ul>
 
 
