spelled out my name and linked it to my CPAN profile
thanks for mentioning this ;)

--- a/views/used_by.tt
+++ b/views/used_by.tt
@@ -20,7 +20,8 @@ Its <a href="http://github.com/kappa/app-cpanhubble">source code</a> is availabl
 </li>
 
 <li>
-<a href="http://pb.rbfh.de/">Pastedance</a> a pastebin written by Datamuc.
+<a href="http://pb.rbfh.de/">Pastedance</a> a pastebin written by
+<a href="http://search.cpan.org/~data/">Danijel Tašov</a>.
 The <a href="http://github.com/datamuc/Pastedance">source code</a> available on Github.
 </li>
 </ul>
