adding slides and dancer for programmers slides

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -27,6 +27,7 @@
     <li><a href="/download">Download</a></li>
     <li><a href="/contribute">Contribute</a></li>
     <li><a href="/used_by">Dancefloor</a></li>
+    <li><a href="/slides">Slides</a></li>
     <li><a href="/about">About</a></li>
 	<li><a href="/donate">Donate</a></li>
 </ul>
