fix link to example

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -31,7 +31,7 @@
 			<li class="nav-sep"></li>
 			<li><a href="/quickstart">quick start</a></li>
 			<li class="nav-sep"></li>
-			<li><a href="/examples">examples</a></li>
+			<li><a href="/example">examples</a></li>
 
 		</ul>
 		<!-- END NAV LEFT -->
