--- a/views/about.tt
+++ b/views/about.tt
@@ -15,7 +15,8 @@ Dancer is free software, it is released under the same terms as Perl itself.
 <h3>Contact</h3>
 
 <p>
-Feel free to <a href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe the mailing list</a> if you want to contact users and developers of the project. You can also check out the archives <a href="http://lists.perldancer.org/pipermail/dancer-users/">here</a>.
+Feel free to <a
+href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe to the mailing list</a> if you want to contact users and developers of the project. You can also check out the archives <a href="http://lists.perldancer.org/pipermail/dancer-users/">here</a>.
 </p>
 
 <p>
@@ -27,8 +28,7 @@ Dancer development.
 <p>
 You can also reach the development team on <code>irc.perl.org</code>, 
 chan <code>#dancer</code>.  If you don't have an IRC client available, you can
-<a href="http://widget.mibbit.com/?settings=285bba04946885da044c7d1e16a79b46&server=irc.perl.org&channel=%23dancer"
-target="_blank">connect using Mibbit web IRC</a>.
+<a href="/">connect using Mibbit web IRC</a>.
 </p>
 
 <h3>Artwork</h3>
