Mention other authors in /about page.

--- a/views/about.tt
+++ b/views/about.tt
@@ -4,6 +4,9 @@
 <p>
 Dancer was inspired by <a href="http://www.sinatrarb.com">Sinatra</a> 
 and has been written by <a href="http://twitter.com/sukria">Alexis Sukrieh</a>.
+Many more authors now contribute to the project - see the AUTHORS file shipped
+with the distribution for the core team, and thanks to all those who have
+contributed features/patches and assistance via GitHub.
 </p>
 
 <h3>License</h3>
