--- a/views/download.tt
+++ b/views/download.tt
@@ -3,7 +3,7 @@
 <h3>Releases</h3>
 
 <p>
-Last <em>stable</em> release is <a href="/downloads/Dancer-1.150.tar.gz">1.150</a>, you can
+Last <em>stable</em> release is <a href="http://search.cpan.org/CPAN/authors/id/X/XS/XSAWYERX/Dancer-1.2003.tar.gz">1.2</a>, you can
 also check out the <a href="http://search.cpan.org/dist/Dancer/">CPAN page</a> for 
 newer releases.
 </p>
