Linking to /irc not / would help.

--- a/views/about.tt
+++ b/views/about.tt
@@ -31,7 +31,7 @@ Dancer development.
 <p>
 You can also reach the development team on <code>irc.perl.org</code>, 
 chan <code>#dancer</code>.  If you don't have an IRC client available, you can
-<a href="/">connect using Mibbit web IRC</a>.
+<a href="/irc">connect using Mibbit web IRC</a>.
 </p>
 
 <h3>Artwork</h3>
